# pkg/apiserver/infrastructure/datastore/datastore.go
@@ -1,18 +1,15 @@
 package datastore
 
 import (
-	"context"
 	"fmt"
-	"reflect"
-	"time"
 )
 
 var (
+	// ErrGetClient Error that get datastore client.
+	ErrGetClient = NewDBError(fmt.Errorf("get datastore client faield"))
+
 	// ErrPrimaryEmpty Error that primary key is empty.
 	ErrPrimaryEmpty = NewDBError(fmt.Errorf("entity primary is empty"))
-
-	// ErrTableNameEmpty Error that table name is empty.
-	ErrTableNameEmpty = NewDBError(fmt.Errorf("entity table name is empty"))
 
 	// ErrNilEntity Error that entity is nil
 	ErrNilEntity = NewDBError(fmt.Errorf("entity is nil"))
@@ -49,102 +46,4 @@ type Config struct {
 	Type     string
 	URL      string
 	Database string
-}
-
-// Entity database data model
-type Entity interface {
-	SetCreateTime(time time.Time)
-	SetUpdateTime(time time.Time)
-	PrimaryKey() string
-	TableName() string
-	ShortTableName() string
-	Index() map[string]interface{}
-}
-
-// NewEntity Create a new object based on the input type
-func NewEntity(in Entity) (Entity, error) {
-	if in == nil {
-		return nil, ErrNilEntity
-	}
-	t := reflect.TypeOf(in)
-	if t.Kind() == reflect.Ptr {
-		t = t.Elem()
-	}
-	new := reflect.New(t)
-	return new.Interface().(Entity), nil
-}
-
-// SortOrder is the order of sort
-type SortOrder int
-
-const (
-	// SortOrderAscending defines the order of ascending for sorting
-	SortOrderAscending = SortOrder(1)
-	// SortOrderDescending defines the order of descending for sorting
-	SortOrderDescending = SortOrder(-1)
-)
-
-// SortOption describes the sorting parameters for list
-type SortOption struct {
-	Key   string
-	Order SortOrder
-}
-
-// FuzzyQueryOption defines the fuzzy query search filter option
-type FuzzyQueryOption struct {
-	Key   string
-	Query string
-}
-
-// InQueryOption defines the include search filter option
-type InQueryOption struct {
-	Key    string
-	Values []string
-}
-
-// IsNotExistQueryOption means the value is empty
-type IsNotExistQueryOption struct {
-	Key string
-}
-
-// FilterOptions filter query returned items
-type FilterOptions struct {
-	Queries    []FuzzyQueryOption
-	In         []InQueryOption
-	IsNotExist []IsNotExistQueryOption
-}
-
-// ListOptions list api options
-type ListOptions struct {
-	FilterOptions
-	Page     int
-	PageSize int
-	SortBy   []SortOption
-}
-
-// DataStore datastore interface
-type DataStore interface {
-	// Add adds entity to database, Name() and TableName() can't return zero value.
-	Add(ctx context.Context, entity Entity) error
-
-	// BatchAdd will adds batched entities to database, Name() and TableName() can't return zero value.
-	BatchAdd(ctx context.Context, entities []Entity) error
-
-	// Update will update entity to database, Name() and TableName() can't return zero value.
-	Update(ctx context.Context, entity Entity) error
-
-	// Delete entity from database, Name() and TableName() can't return zero value.
-	Delete(ctx context.Context, entity Entity) error
-
-	// Get entity from database, Name() and TableName() can't return zero value.
-	Get(ctx context.Context, entity Entity) error
-
-	// List entities from database, TableName() can't return zero value, if no matches, it will return a zero list without error.
-	List(ctx context.Context, query Entity, options *ListOptions) ([]Entity, error)
-
-	// Count entities from database, TableName() can't return zero value.
-	Count(ctx context.Context, entity Entity, options *FilterOptions) (int64, error)
-
-	// IsExist Name() and TableName() can't return zero value.
-	IsExist(ctx context.Context, entity Entity) (bool, error)
 }
