# pkg/apiserver/interfaces/api/user.go
@@ -5,8 +5,10 @@ import (
 
 	"github.com/wecoding/iam/pkg/api"
 	"github.com/wecoding/iam/pkg/apiserver/domain/service"
-	apisv1 "github.com/wecoding/iam/pkg/apiserver/interfaces/api/dto/v1"
 	"github.com/wecoding/iam/pkg/apiserver/utils"
+
+	iamv1alpha1 "github.com/coding-hui/api/iam/v1alpha1"
+	metav1alpha1 "github.com/coding-hui/common/meta/v1alpha1"
 )
 
 type user struct {
@@ -23,7 +25,28 @@ func (u *user) GetApiGroup() InitApiGroup {
 		BaseUrl: versionPrefix + "/users",
 		Apis: []InitApi{
 			{
+				Method:  "POST",
+				Path:    "",
+				Handler: u.createUser,
+			},
+			{
+				Method:  "PUT",
+				Path:    "/:name",
+				Handler: u.updateUser,
+			},
+			{
+				Method:  "DELETE",
+				Path:    "/:name",
+				Handler: u.deleteUser,
+			},
+			{
 				Method:  "GET",
+				Path:    "/:name",
+				Handler: u.getUser,
+			},
+			{
+				Method:  "GET",
+				Path:    "",
 				Handler: u.listUser,
 			},
 		},
@@ -32,16 +55,105 @@ func (u *user) GetApiGroup() InitApiGroup {
 	return v1
 }
 
+// createUser
+// @Tags Users
+// @Summary create user
+// @Description create user
+// @Accept  application/json
+// @Product application/json
+// @Param data body iamv1alpha1.User true "user info"
+// @Success   200   {object}  api.Response "{"code": "000", "data": [...]}
+// @Router /api/v1/users [post]
+// @Security Bearer
+func (u *user) createUser(c *gin.Context) {
+	user := &iamv1alpha1.User{}
+	err := c.ShouldBindJSON(user)
+	if err != nil {
+		api.Fail(c)
+		return
+	}
+	err = u.UserService.Create(c.Request.Context(), user, metav1alpha1.CreateOptions{})
+	if err != nil {
+		api.FailWithMessage(err.Error(), c)
+		return
+	}
+
+	api.Ok(c)
+}
+
+// updateUser
+// @Tags Users
+// @Summary update user info
+// @Description update user info
+// @Accept  application/json
+// @Product application/json
+// @Param name path string false "identifier of a user"
+// @Param data body iamv1alpha1.User true "user info"
+// @Success   200   {object}  api.Response "{"code": "000", "data": [...]}
+// @Router /api/v1/users/{name} [put]
+// @Security Bearer
+func (u *user) updateUser(c *gin.Context) {
+	user := &iamv1alpha1.User{}
+	err := c.ShouldBindJSON(user)
+	if err != nil {
+		api.Fail(c)
+		return
+	}
+	err = u.UserService.Update(c.Request.Context(), user, metav1alpha1.UpdateOptions{})
+	if err != nil {
+		api.FailWithMessage(err.Error(), c)
+		return
+	}
+
+	api.Ok(c)
+}
+
+// deleteUser
+// @Tags Users
+// @Summary delete user
+// @Description delete user
+// @Param name path string false "identifier of a user"
+// @Success   200   {object}  api.Response "{"code": "000", "data": [...]}
+// @Router /api/v1/users/{name} [delete]
+// @Security Bearer
+func (u *user) deleteUser(c *gin.Context) {
+	err := u.UserService.Delete(c.Request.Context(), c.Param("name"), metav1alpha1.DeleteOptions{})
+	if err != nil {
+		api.FailWithMessage(err.Error(), c)
+		return
+	}
+
+	api.Ok(c)
+}
+
+// getUser
+// @Tags Users
+// @Summary get user detail
+// @Description get user detail
+// @Param name path string false "identifier of a user"
+// @Success   200   {object}  api.Response{data=iamv1alpha1.User} "{"code": "000", "data": [...]} "user detail"
+// @Router /api/v1/users/{name} [get]
+// @Security Bearer
+func (u *user) getUser(c *gin.Context) {
+	user, err := u.UserService.Get(c.Request.Context(), c.Param("name"), metav1alpha1.GetOptions{})
+	if err != nil {
+		api.FailWithMessage(err.Error(), c)
+		return
+	}
+
+	api.OkWithData(user, c)
+}
+
 // listUser
-// @Tags 用户管理
-// @Summary 分页获取用户列表
-// @Description 分页获取用户列表
-// @Param name query string false "名称"
-// @Param alias query string false "别名"
-// @Param email query string false "邮箱"
-// @Param page_size query int false "页条数"
-// @Param page query int false "页码"
-// @Success   200   {object}  api.Response{data=api.PageResponse{list=[]apisv1.DetailUserResponse}} "{"code": "000", "data": [...]} "分页获取用户列表,返回包括列表,总数,页码,每页数量"
+// @Tags Users
+// @Summary list users
+// @Description list users
+// @Param name query string false "fuzzy search based on name"
+// @Param alias query string false "fuzzy search based on alias"
+// @Param email query string false "fuzzy search based on email"
+// @Param offset query int false "query the page number"
+// @Param limit query int false "query the page size number"
+// @Success   200   {object}  api.Response{data=api.PageResponse{list=[]iamv1alpha1.User}} "{"code": "000", "data": [...]} "users"
 // @Router /api/v1/users [get]
 // @Security Bearer
 func (u *user) listUser(c *gin.Context) {
@@ -50,14 +162,13 @@ func (u *user) listUser(c *gin.Context) {
 		api.Fail(c)
 		return
 	}
-	resp, err := u.UserService.ListUsers(c.Request.Context(), page, pageSize, apisv1.ListUserOptions{
-		Name:  c.Query("name"),
-		Alias: c.Query("alias"),
-		Email: c.Query("email"),
+	resp, err := u.UserService.List(c.Request.Context(), metav1alpha1.ListOptions{
+		Limit:  &pageSize,
+		Offset: &page,
 	})
 	if err != nil {
-		api.Fail(c)
+		api.FailWithMessage(err.Error(), c)
 		return
 	}
-	api.OkWithPage(resp.Users, resp.Total, page, pageSize, c)
+	api.OkWithPage(resp.Items, resp.GetTotalCount(), c)
 }
